--- a/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/AndroidManifest.xml
+++ b/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".BaseActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,9 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".ScheduleActivity" />
         <activity android:name=".SearchActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".LoginActivity"
+            android:windowSoftInputMode="adjustPan"
+            />
         <activity android:name=".LoadingActivity" />
         <activity android:name=".NotificationActivity" />
         <activity android:name=".NotificationDetailActivity"></activity>
